
iconsdir = $(datadir)/inkscape/icons

pixmaps = 

icons_DATA = \
    $(pixmaps) \
    align-distribute.svg \
    break-apart.svg \
    clone-unlink.svg \
    clone.svg \
    combine.svg \
    cut-path.svg \
    difference.svg \
    division.svg \
    duplicate.svg \
    exclusion.svg \
    export.svg \
    fill-stroke.svg \
    flip-horiz.svg \
    flip-vert.svg \
    fullscreen.svg \
    grid.svg \
    group.svg \
    guides.svg \
    import.svg \
    inkscape.svg \
    inset.svg \
    intersection.svg \
    keys-mouse.svg \
    lower-to-bottom.svg \
    lower.svg \
    make-bitmap.svg \
    move-to-bottom-layer.svg \
    move-to-next-layer.svg \
    move-to-prev-layer.svg \
    move-to-top-layer.svg \
    object-properties.svg \
    object-to-path.svg \
    offset-dynamic.svg \
    offset-linked.svg \
    open-recent.svg \
    outset.svg \
    paste-in-place.svg \
    paste-style.svg \
    raise-to-top.svg \
    raise.svg \
    reverse.svg \
    rotate-90-ccw.svg \
    rotate-90-cw.svg \
    select-all.svg \
    select.svg \
    show-hide-dialogs.svg \
    simplify.svg \
    stroke-to-path.svg \
    tool-arc.svg \
    tool-dropper.svg \
    tool-dynadraw.svg \
    tool-freehand.svg \
    tool-node.svg \
    tool-pen.svg \
    tool-rect.svg \
    tool-select.svg \
    tool-spiral.svg \
    tool-star.svg \
    tool-text.svg \
    tool-zoom.svg \
    trace.svg \
    transform-corners.svg \
    transform-gradient.svg \
    transform-pattern.svg \
    transform-stroke.svg \
    transform.svg \
    tutorials.svg \
    ungroup.svg \
    union.svg \
    vacuum-defs.svg \
    window-duplicate.svg \
    window-next.svg \
    window-prev.svg \
    xml-editor.svg \
    zoom-100.svg \
    zoom-200.svg \
    zoom-50.svg \
    zoom-drawing.svg \
    zoom-in.svg \
    zoom-next.svg \
    zoom-out.svg \
    zoom-page.svg \
    zoom-prev.svg \
    zoom-selection.svg \
    zoom-width.svg \
    \
    arrows_hor.xpm \
    arrows_ver.xpm \
    rotate.xpm \
    scale_hor.xpm \
    scale_ver.xpm \
    \
    icons.svg

EXTRA_DIST = $(icons_DATA)
