
tutorialdir = $(datadir)/inkscape/tutorials

tutorial_DATA = \
    tutorial-elements.svg \
    tutorial-tips.svg \
    elementsofdesign.sl.svg \
    making_markers.svg \
    tipsandtricks.sl.svg \
    tutorial-advanced.svg \
    tutorial-advanced.fr.svg \
    tutorial-advanced.sl.svg \
    tutorial-basic.svg \
    tutorial-basic-es.svg \
    tutorial-basic.ca.svg \
    tutorial-basic.fr.svg \
    tutorial-basic.nn.svg \
    tutorial-basic.ru.svg \
    tutorial-basic.sl.svg \
    tutorial-calligraphy.svg \
    tutorial-calligraphy.sl.svg \
    tutorial-calligraphy-es.svg \
    tutorial-shapes.svg \
    tutorial-shapes.sl.svg \
    tutorial-tracing.svg potrace.png oldguitar.jpg tux.png



EXTRA_DIST = $(tutorial_DATA)

