
tutorialdir = $(datadir)/inkscape/tutorials

tutorial_DATA = \
    README \
    gpl-2.svg	\
    tutorial-elements.svg \
    tutorial-elements.fr.svg \
    tutorial-elements.es.svg \
    elementsofdesign.sl.svg \
    tutorial-tips.svg \
    tutorial-tips.fr.svg \
    tipsandtricks.sl.svg \
    making_markers.svg \
    tutorial-advanced.svg \
    tutorial-advanced.fr.svg \
    tutorial-advanced.ja.svg \
    tutorial-advanced.sl.svg \
    tutorial-basic.svg \
    tutorial-basic.es.svg \
    tutorial-basic.ca.svg \
    tutorial-basic.fr.svg \
    tutorial-basic.ja.svg \
    tutorial-basic.nn.svg \
    tutorial-basic.ru.svg \
    tutorial-basic.sl.svg \
    tutorial-calligraphy.svg \
    tutorial-calligraphy.sl.svg \
    tutorial-calligraphy.es.svg \
    tutorial-calligraphy.fr.svg \
    tutorial-shapes.svg \
    tutorial-shapes.fr.svg \
    tutorial-shapes.es.svg \
    tutorial-shapes.ja.svg \
    tutorial-shapes.sl.svg \
    tutorial-tracing.svg potrace.png oldguitar.jpg tux.png \
    tutorial-tracing.fr.svg potrace-fr.png \
    tutorial-tracing.es.svg



EXTRA_DIST = $(tutorial_DATA)

