#
# Sodipodi bonobo embeddable
# Author: Lauris Kaplinski <lauris@ximian.com>
#

INCLUDES = \
	-I$(includedir) \
	$(INKSCAPE_BONOBO_CFLAGS) \
	$(INKSCAPE_CFLAGS)

noinst_LIBRARIES = libspbonobo.a

libspbonobo_a_SOURCES = \
	sodipodi-bonobo.c sodipodi-bonobo.h \
	svg-doc-factory.c svg-doc-factory.h \
	embeddable-document.c embeddable-document.h \
	embeddable-desktop.c embeddable-desktop.h \
	embeddable-drawing.c embeddable-drawing.h \
	canvas-translator.c canvas-translator.h


