#
# Sodipodi bonobo embeddable
# Author: Lauris Kaplinski <lauris@ximian.com>
#

INCLUDES = \
	-I$(includedir) \
	$(INKSCAPE_BONOBO_CFLAGS) \
	$(INKSCAPE_CFLAGS)

noinst_LIBRARIES = libspbonobo.a

libspbonobo_a_SOURCES = \
	sodipodi-bonobo.cpp sodipodi-bonobo.h \
	svg-doc-factory.cpp svg-doc-factory.h \
	embeddable-document.cpp embeddable-document.h \
	embeddable-desktop.cpp embeddable-desktop.h \
	embeddable-drawing.cpp embeddable-drawing.h \
	canvas-translator.cpp canvas-translator.h


