noinst_LIBRARIES = libvarot.a

INCLUDES = \
	-I.. \
	$(cflags) \
	-I$(top_srcdir)/src \
	$(INKSCAPE_CFLAGS)

libvarot_a_SOURCES = \
	AVL.cpp AVL.h \
	DblLinked.cpp DblLinked.h \
	LivarotDefs.h	\
	MyMath.h	\
	Path.cpp Path.h \
	PathConversion.cpp Path.h \
	PathOutline.cpp Path.h \
	PathStroke.cpp Path.h \
	PathSimplify.cpp Path.h \
	ShapeUtils.h	\
	Shape.cpp Shape.h \
	ShapeMisc.cpp Shape.h \
	ShapeDraw.cpp Shape.h \
	ShapeSweep.cpp Shape.h \
	ShapeSweepUtils.cpp Shape.h \
	MySeg.cpp MySeg.h

