
LinLibertinedir = $(datadir)/inkscape/branding/LinLibertine

LinLibertine_DATA = \
	Bugs.txt \
	LinBiolinum_RB.otf \
	LinLibertine_RBI.otf \
	ChangeLog.txt \
	LinBiolinum_RI.otf \
	LinLibertine_RB.otf \
	OFL-1.1.txt \
	GPL.txt \
	LinBiolinum_R.otf \
	LinLibertine_RI.otf \
	README \
	INSTALL.txt \
	LinLibertine_DR.otf \
	LinLibertine_R.otf \
	Readme-TEX.txt \
	LICENCE.txt \
	LinLibertine_I.otf \
	LinLibertine_RZI.otf \
	ToDo.txt \
	LinBiolinum_K.otf \
	LinLibertine_M.otf \
	LinLibertine_RZ.otf \
	VERSION

EXTRA_DIST = $(LinLibertine_DATA)	
